[package]
name = "mochow-sdk-rust"
version = "1.3.1"
edition = "2021"
license-file = "LICENSE"
description = """
A simple SDK for mochow compatible API.
"""
readme = "README.md"
documentation = "https://docs.rs/mochow-sdk-rust"
repository = "https://github.com/baidu/mochow-sdk-rust"
homepage = "https://github.com/baidu/mochow-sdk-rust"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
reqwest = {version = "0.12.5", features = [
  "gzip",
  "json",
  "multipart",
  "rustls-tls",
]}
reqwest-middleware = {version = "0.3.2", features = ["json"]}
reqwest-retry = "0.6.0"
reqwest-tracing = "0.5.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[dev-dependencies]
lazy_static = "1.5.0"
tokio = {version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"]}
